# scene_detect

./: .gitignore  README.md  create_thumbnail.py  divide_scene.py  imagebind.ipynb  make_sql_db.py  pyproject.toml  sample.py  save_embedding_db.py  search_video.py  usearch_sample.py
scene_detect/: __init__.py  __main__.py  create_thumbnail.py  divide_scene.py  make_embedding_db.py  search_related_videos.py  search_video.py
tests/: clip_sample.py  test_divide_scene.py
