[tool.poetry]
name = "scene-detect"
version = "0.1.0"
description = ""
authors = ["MiyamotoRin <muhe.iroiro.thedoctor@digitalnature.slis.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
numpy = "^1.26.1"
scenedetect = "^0.6.2"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
