[tool.poetry]
name = "scene-detect"
version = "0.1.0"
description = ""
authors = ["MiyamotoRin <muhe.iroiro.thedoctor@digitalnature.slis.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.1"
scenedetect = "^0.6.2"
opencv-python = "^4.8.1.78"
thumbnail = "^1.5"
torch = "^2.1.1"
open-clip-torch = "^2.23.0"
usearch = "^2.8.13"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
